<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="score_format">Очки: %d</string>
    <string name="timer_format">Время: %d:%s</string>
    <string name="hint_full_name">Введите ФИО</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="submit">Отправить</string>
    <string name="zodiac_description">Изображение знака зодиака</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- <string name="hello_blank_fragment">Hello blank fragment</string> -->
</resources>