<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_full_name"
        android:inputType="textPersonName"
        android:autofillHints="name" />


    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />
        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>


    <Spinner
        android:id="@+id/spCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <SeekBar
        android:id="@+id/sbDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10" />


    <CalendarView
        android:id="@+id/cvBirthDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ImageView
        android:id="@+id/ivZodiac"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        android:contentDescription="@string/zodiac_description" />


    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />


    <TextView
        android:id="@+id/tvOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>